wire tie-breaker report into Round Robin view, plus a few wording tweaks

--- a/templates/app.html
+++ b/templates/app.html
@@ -248,6 +248,7 @@
             <a href="#" onclick="window.open('/chart/rr_brackets', '_blank')"">Round Robin Brackets</a>
             <a href="#" onclick="window.open('/chart/rr_scores', '_blank')"">Round Robin Scores</a>
             <a href="#" onclick="window.open('/dash/rr_dash', '_blank')"">Live Dashbaord</a>
+            <a href="#" onclick="window.open('/report/rr_tb_report', '_blank')"">Tie-Breaker Report</a>
           </form>
         </div>
       </div>
