--- a/templates/tourn.html
+++ b/templates/tourn.html
@@ -172,9 +172,9 @@
       </div>
       <div class="section buttons">
         {% if new_tourn %}
-        <button class="submit" value="{{btn_val[0]}}"{{btn_attr[0]}}>Create Tournament</button>
+        <button class="submit" value="{{buttons[0]}}"{{btn_attr[0]}}>{{btn_lbl[0]}}</button>
         {% else %}
-        <button class="submit" value="{{btn_val[1]}}"{{btn_attr[1]}}>Create Tournament</button>
+        <button class="submit" value="{{buttons[1]}}"{{btn_attr[1]}}>{{btn_lbl[1]}}</button>
         {% endif %}
       </div>
       {% endif %}  {# tourn #}
