--- a/templates/app.html
+++ b/templates/app.html
@@ -120,7 +120,7 @@
         <span class="view_sel">
           View:
           {% for view, info in view_defs.items() %}
-          <label>{{info.name}}<input value="{{view}}"{{view_chk[view]}}></label>
+          <label>{{info.name}}<input type="radio" name="view" value="{{view}}"{{view_chk[view]}}></label>
           {% endfor %}
         </span>
         <div class="subsect info_blk">
@@ -171,10 +171,6 @@
      $(".actions button").attr({
        type: 'submit',
        name: "submit_func"
-     });
-     $(".view_sel input").attr({
-       type: 'radio',
-       name: "view_rdo"
      });
 
      // error dialog
