--- a/templates/login.html
+++ b/templates/login.html
@@ -6,10 +6,10 @@
 
     <style>
      .err_dlg {
+       width: 75%;
        padding: 1.1rem 1.4rem;
      }
      .err_dlg div {
-       width: 22rem;
        color: #D10000;
        overflow: auto;
      }
@@ -23,10 +23,10 @@
        display: block;
      }
      select {
-       width: 11.5rem;
+       width: 12.5rem;
      }
-     intput {
-       width: 15rem;
+     input {
+       width: 12rem;
      }
     </style>
   </head>
@@ -39,18 +39,17 @@
 
     <form action="/login" method="post" enctype="multipart/form-data">
       <h1>Login</h1>
-      <p><i>Instructions...</i></p>
       <section>
         <p>
           <label for="username">User:</label>
           <select id="username" name="username" required>
-            <option value="" disabled selected hidden>Select player...</option>
             {% if logins %}
+            <option value="" disabled selected hidden>Select player...</option>
             {% for login in logins %}
             <option value="{{login[0]}}">{{login[1]}}</option>
             {% endfor %}
-            {% elif admin_user %}
-            <option value="{{admin_user}}">{{admin_user}}</option>
+            {% else %}
+            <option value="{{admin_user}}" selected>{{admin_user}}</option>
             {% endif %}
           </select>
         </p>
