a little tidying of security model

--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,7 @@
     <style>
      .err_dlg {
        width: 75%;
+       max-width: 20rem;
        padding: 1.1rem 1.4rem;
      }
      .err_dlg div {
