--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -16,6 +16,21 @@
      .err_dlg button {
        margin-top: 1.2rem;
      }
+     h1 {
+       font-size: 1.5rem;
+       margin-block-start: 1.0rem;
+       margin-block-end: 0.0rem;
+     }
+     h2 {
+       font-size: 1.25rem;
+       margin-block-start: 1.0rem;
+       margin-block-end: 0.0rem;
+     }
+     h3 {
+       font-size: 1.125rem;
+       margin-block-start: 0.75rem;
+       margin-block-end: 0.5rem;
+     }
     </style>
   </head>
 
