--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -5,6 +5,9 @@
     <title>{{title}}</title>
 
     <style>
+     html {
+       font-size: 16px;
+     }
      .err_dlg {
        padding: 1.1rem 1.4rem;
      }
@@ -16,20 +19,49 @@
      .err_dlg button {
        margin-top: 1.2rem;
      }
+     .login_info {
+       float: right;
+       margin-top: 0.0rem;
+       font-size: 0.80rem;
+       text-align: right;
+     }
+     .login_info span {
+       font-weight: normal;
+     }
+     .info {
+       display: flex;
+       flex-flow: row wrap;
+       width: 100%;
+     }
+     .info p {
+       min-width: 45%;
+       justify-content: space-around;
+       margin: 0.25rem;
+     }
+     .info span {
+       background-color: #F0F0F0;
+       display: inline-block;
+       min-width: 2rem;
+       padding: 0.02rem 0.5rem 0.05rem 0.3rem;
+     }
+     span.med {
+       min-width: 4.5rem;
+     }
+     span.wide {
+       min-width: 9rem;
+     }
      h1 {
        font-size: 1.5rem;
-       margin-block-start: 1.0rem;
-       margin-block-end: 0.0rem;
      }
      h2 {
-       font-size: 1.25rem;
-       margin-block-start: 1.0rem;
-       margin-block-end: 0.0rem;
+       font-size: 1.375rem;
+       margin-bottom: 0.25rem;
      }
      h3 {
+       font-size: 1.25rem;
+     }
+     h4 {
        font-size: 1.125rem;
-       margin-block-start: 0.75rem;
-       margin-block-end: 0.5rem;
      }
     </style>
   </head>
@@ -39,12 +71,49 @@
       <div></div>
       <button autofocus>Close</button>
     </dialog>
-
-    <h1>{{tourn.name}}</h1>
+    <p class="login_info">
+      Logged in as: <span>{{user.nick_name}}</span> [<a href='/logout'>Logout</a>]
+    </p>
+    <section">
+      <h2>Info/Stats</h2>
+      <section class="info">
+        {% for info in info_flds %}
+        {% if tourn.stage_compl >= info.min_stg %}
+        <p>
+          {# NOT that an info_data value of `0` must be passed in as a string #}
+          <label>{{info.label}}</label>: <span class="{{info.cls}}">{{(info_data[loop.index0] or "&nbsp;")|safe}}</span>
+        </p>
+        {% endif %}
+        {% endfor %}
+      </section>
+    </section>
     <section>
-      <h2>Welcome {{user.nick_name}}!</h2>
+      <h2>Current Game</h2>
       <p>
       </p>
+    </section>
+    <section>
+      <h2>Past Games</h2>
+      <section>
+        <h3>Seeding</h3>
+        <p>
+        </p>
+      </section>
+      <section>
+        <h3>Round Robin</h3>
+        <p>
+        </p>
+      </section>
+      <section>
+        <h3>Semifinals</h3>
+        <p>
+        </p>
+      </section>
+      <section>
+        <h3>Finals</h3>
+        <p>
+        </p>
+      </section>
     </section>
   </body>
 
